--- a/ClassProject2/app.ipynb
+++ b/ClassProject2/app.ipynb
@@ -113,14 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +181,7 @@
       "c. 0 1 2 3 4    d. 0 1 2 3 4 5\n",
       "\n",
       "\n",
-      "Your Total Score is: 7\n"
+      "Your Total Score is: 7 out of 10\n"
      ]
     }
    ],
@@ -204,7 +197,7 @@
     "    print(\"\\n\")\n",
     "    answers.append({\"id\":question[\"id\"],\"correct\":userInput.lower() == question[\"correct\"]})\n",
     "\n",
-    "print(f\"Your Total Score is: {len([i for i in answers if i[\"correct\"]==True])}\")"
+    "print(f\"Your Total Score is: {len([i for i in answers if i[\"correct\"]==True])} out of {len(Quiz_data)}\")"
    ]
   },
   {
